# gromacs-2024.1_developer

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS  AUTHORS.md  CITATION.cff  CMakeLists.txt  CPackInit.cmake  CTestConfig.cmake  DEVELOPMENT.md  DEV_PROTOCOL.md  INSTALL  NOTICE  README  README.md  ReadMe.txt  Readme.sh  Readme.txt  VCPKG_INSTALL_COMMANDS.md  convert_to_utf8_lf.cmd  convert_to_utf8_lf.ps1  convert_to_utf8_lf_config_whitelist.json  out_align_my_documents_snippet.txt  out_tail_align_my_documents.py  partial_clone_exclude_whitelist.json  requirement.txt  setup_python_env.cmd  temp_snip.txt  tmp_collect_debug_dataset.py
api/gmxapi/: CMakeLists.txt
api/gmxapi/cpp/: CMakeLists.txt  context.cpp  context_impl.h  createsession.h  exceptions.cpp  gmxapi.cpp  md.cpp  md_impl.h  mdmodule.cpp  mdsignals.cpp  mdsignals.h  resourceassignment.cpp  session.cpp  session_impl.h  sessionresources.h  status.cpp  system.cpp  system_impl.h  tpr.cpp  version.cpp  workflow.cpp  workflow.h  workflow_impl.h
api/gmxapi/include/: resourceassignment.cmakein.h
api/legacy/: CMakeLists.txt
api/nblib/tests/: CMakeLists.txt  box.cpp  gmxcalculator.cpp  integrator.cpp  interactions.cpp  molecules.cpp  nbkernelsystem.cpp  nbnxmsetup.cpp  particletype.cpp  pbcholder.cpp  simstate.cpp  testhelpers.h  testsystems.cpp  testsystems.h  topology.cpp  tpr.cpp  virials.cpp
python_packaging/sample_restraint/docs/: CMakeLists.txt
python_packaging/sample_restraint/src/: CMakeLists.txt
scripts/: CMakeLists.txt  align_my_documents.ps1  align_my_documents.py  check_gpl3_headers.ps1  check_lgpl_traces.ps1  checkheaders.sh  fetch_paramchem_str.ps1  gen_commit_msg.py  gen_commit_msg_googleai.py  install_openbabel.ps1
scripts/compliance/: add_gpl3_headers.py  check_lgpl_traces.ps1
src/gromacs/applied_forces/: CMakeLists.txt  electricfield.cpp  electricfield.h
src/gromacs/coordinateio/: CMakeLists.txt  coordinatefile.cpp  coordinatefile.h  coordinatefileenums.h  frameconverterenums.h  iframeconverter.h  ioutputadapter.h  outputadaptercontainer.cpp  outputadaptercontainer.h  outputadapters.h  requirements.cpp  requirements.h
src/gromacs/domdec/: CMakeLists.txt  atomdistribution.cpp  atomdistribution.h  box.cpp  box.h  builder.h  cellsizes.cpp  cellsizes.h  collect.cpp  collect.h  computemultibodycutoffs.cpp  computemultibodycutoffs.h  distribute.cpp  distribute.h  dlb.cpp  dlb.h  dlbtiming.cpp  dlbtiming.h  domdec.cpp  domdec.h  domdec_constraints.cpp  domdec_constraints.h  domdec_internal.h  domdec_network.cpp  domdec_network.h  domdec_setup.cpp  domdec_setup.h  domdec_specatomcomm.cpp  domdec_specatomcomm.h  domdec_struct.h  domdec_vsite.cpp  domdec_vsite.h  dump.cpp  dump.h  ga2la.cpp  ga2la.h  gpuhaloexchange.h  gpuhaloexchange_impl.cpp  gpuhaloexchange_impl_gpu.cpp  gpuhaloexchange_impl_gpu.cu  (+28 more)
src/gromacs/energyanalysis/: CMakeLists.txt  analysismodule.h  energyanalysisframe.h  energyterm.cpp  energyterm.h  ienergyanalysis.h
src/gromacs/essentialdynamics/: CMakeLists.txt  edsam.cpp  edsam.h
src/gromacs/fileio/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  confio.cpp  enxio.cpp  enxio.h  espio.cpp  espio.h  filetypes.cpp  g96io.cpp  g96io.h  gmx_internal_xdr.cpp  gmx_internal_xdr.h  gmxfio.cpp  gmxfio.h  gmxfio_impl.h  gmxfio_xdr.cpp  gmxfio_xdr.h  groio.cpp  groio.h  libxdrf.cpp  matio.cpp  matio.h  md5.cpp  md5.h  mrcdensitymap.cpp  mrcdensitymap.h  mrcdensitymapheader.cpp  mrcdensitymapheader.h  mrcserializer.cpp  mrcserializer.h  mtxio.cpp  mtxio.h  oenv.cpp  pdbio.cpp  readinp.cpp  readinp.h  rgb.h  timecontrol.cpp  timecontrol.h  (+19 more)
src/gromacs/gmxana/: CMakeLists.txt  anadih.cpp  angle_correction.cpp  angle_correction.h  binsearch.cpp  binsearch.h  cluster_methods.cpp  cluster_methods.h  cmat.cpp  cmat.h  dens_filter.cpp  dens_filter.h  dlist.cpp  eigio.cpp  eigio.h  fitahx.cpp  fitahx.h  gmx_ana.h  gmx_anaeig.cpp  gmx_analyze.cpp  gmx_angle.cpp  gmx_awh.cpp  gmx_bar.cpp  gmx_bundle.cpp  gmx_chi.cpp  gmx_cluster.cpp  gmx_clustsize.cpp  gmx_confrms.cpp  gmx_covar.cpp  gmx_current.cpp  gmx_density.cpp  gmx_densmap.cpp  gmx_densorder.cpp  gmx_dielectric.cpp  gmx_dipoles.cpp  gmx_disre.cpp  gmx_dos.cpp  gmx_dyecoupl.cpp  gmx_enemat.cpp  gmx_energy.cpp  (+58 more)
src/gromacs/gmxlib/: CMakeLists.txt  conformation_utilities.cpp  conformation_utilities.h  network.cpp  network.h  nrnb.cpp  nrnb.h
src/gromacs/gmxpreprocess/: CMakeLists.txt  add_par.cpp  add_par.h  calch.cpp  calch.h  convparm.cpp  convparm.h  editconf.cpp  editconf.h  fflibutil.cpp  fflibutil.h  gen_ad.cpp  gen_ad.h  gen_maxwell_velocities.cpp  gen_maxwell_velocities.h  gen_vsite.cpp  gen_vsite.h  genconf.cpp  genconf.h  genhydro.cpp  genhydro.h  genion.cpp  genion.h  genrestr.cpp  genrestr.h  gmxcpp.cpp  gmxcpp.h  gpp_atomtype.cpp  gpp_atomtype.h  gpp_bond_atomtype.cpp  gpp_bond_atomtype.h  gpp_nextnb.cpp  gpp_nextnb.h  grompp.cpp  grompp.h  grompp_impl.h  h_db.cpp  h_db.h  hackblock.cpp  hackblock.h  (+47 more)
src/gromacs/gpu_utils/: CMakeLists.txt  clfftinitializer.cpp  clfftinitializer.h  cuda_arch_utils.cuh  cuda_kernel_utils.cuh  cudautils.cuh  device_context.cpp  device_context.h  device_context_ocl.cpp  device_context_sycl.cpp  device_event.cuh  device_event.h  device_event_ocl.h  device_event_sycl.h  device_stream.cpp  device_stream.cu  device_stream.h  device_stream_manager.cpp  device_stream_manager.h  device_stream_ocl.cpp  device_stream_sycl.cpp  devicebuffer.cuh  devicebuffer.h  devicebuffer_datatype.h  devicebuffer_ocl.h  devicebuffer_sycl.cpp  devicebuffer_sycl.h  gmxopencl.h  gmxsycl.h  gpu_macros.h  gpu_utils.cpp  gpu_utils.cu  gpu_utils.h  gpueventsynchronizer.h  gpueventsynchronizer_helpers.cpp  gpueventsynchronizer_helpers.h  gpuregiontimer.cuh  gpuregiontimer.h  gpuregiontimer_ocl.h  gpuregiontimer_sycl.h  (+23 more)
src/gromacs/imd/: CMakeLists.txt  imd.cpp  imd.h  imdsocket.cpp  imdsocket.h
src/gromacs/linearalgebra/: CMakeLists.txt  eigensolver.cpp  gmx_arpack.cpp  gmx_arpack.h  gmx_blas.h  gmx_lapack.h  matrix.cpp  sparsematrix.cpp
src/gromacs/listed_forces/: CMakeLists.txt  bonded.cpp  bonded.h  disre.cpp  disre.h  orires.h  (+20 more)
(+3159 files in other folders)
